# gridpulse

./: .gitignore  INTERVIEW_PREP.md  LICENSE  Makefile  README.md  RESUME_BULLETS.md  pyproject.toml
.github/workflows/: daily.yml
.streamlit/: config.toml
dashboard/: app.py
evals/: results.json
reports/: backtest_results.json  run_log.jsonl
reports/briefs/: 2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  latest.md
src/gridpulse/: config.py  db.py
src/gridpulse/analyst/: brief.py  evals.py  llm.py  tools.py  verify.py
src/gridpulse/ingest/: aemo.py  run.py  weather.py
src/gridpulse/models/: backtest.py  features.py  train.py
tests/: test_data_quality.py  test_features.py  test_tools.py  test_verify.py
