[project]
name = "gridpulse"
version = "0.1.0"
description = "AI market analyst for Australia's National Electricity Market: spike-risk forecasting + verified LLM daily briefings"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "requests>=2.31",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "streamlit>=1.35",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
